--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "godam-react",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/lib.commonjs2.js",
+  "types": "dist/ts/src/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm pack && cd test && npm run install:test",
+    "webpack": "webpack --config webpack.config.js",
+    "build:dev": "cross-env NODE_ENV=development npm run webpack && npm run test",
+    "build:prod": "cross-env NODE_ENV=production npm run webpack && npm run test",
+    "deploy": "npm run build:dev && npm run build:prod"
   },
   "repository": {
     "type": "git",
@@ -18,9 +23,17 @@
   "homepage": "https://github.com/ujjwalguptaofficial/godam-react#readme",
   "dependencies": {},
   "devDependencies": {
-    "godam": "^0.2.0",
+    "copy-webpack-plugin": "^6.1.1",
+    "cross-env": "^7.0.3",
+    "godam": "^0.3.0",
+    "ts-loader": "^7.0.4",
     "typescript": "^4.3.5",
-    "react-dom": "^16.7.0",
-    "react": "^16.7.0"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-external-react": "^1.1.52"
+  },
+  "peerDependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
