--- a/package.json
+++ b/package.json
@@ -21,20 +21,17 @@
     "url": "https://github.com/ujjwalguptaofficial/godam-react/issues"
   },
   "homepage": "https://github.com/ujjwalguptaofficial/godam-react#readme",
-  "dependencies": {},
+  "dependencies": {
+    "godam": "^0.7.1"
+  },
   "devDependencies": {
     "copy-webpack-plugin": "^6.1.1",
     "cross-env": "^7.0.3",
-    "godam": "^0.3.0",
     "ts-loader": "^7.0.4",
     "typescript": "^4.3.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-external-react": "^1.1.52",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
-  },
-  "peerDependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
