--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "godam-react",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "",
-  "main": "dist/lib.commonjs2.js",
+  "main": "dist/godam-react.commonjs2.js",
   "types": "dist/ts/src/index.d.ts",
   "scripts": {
     "test": "npm pack && cd test && npm run install:test",
     "webpack": "webpack --config webpack.config.js",
     "build:dev": "cross-env NODE_ENV=development npm run webpack",
-    "build:prod": "cross-env NODE_ENV=production npm run webpack && npm run test",
+    "build:prod": "cross-env NODE_ENV=production npm run webpack",
     "deploy": "npm run build:dev && npm run build:prod"
   },
   "repository": {
@@ -27,12 +27,13 @@
   "devDependencies": {
     "copy-webpack-plugin": "^6.1.1",
     "cross-env": "^7.0.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^7.0.4",
     "typescript": "^4.3.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-external-react": "^1.1.52",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "webpack-external-react": "^1.1.52"
   }
 }
